# utsushi

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap  config-bot.h  configure.ac  install-deps
connexions/: Makefile.am  hexdump.cpp  hexdump.hpp  usb.cpp  usb.hpp
doc/: Makefile.am  api-specs.dox  dev-notes.dox  doxygen.conf  filter  header.html  layout.xml  main.dox  style.css  test-spec.dox  usr-guide.dox
doc/tests/: Makefile.am
drivers/: Makefile.am  combo.conf  combo.cpp  combo.hpp
drivers/esci/: Makefile.am  action.hpp  bounding-box.hpp  buffer.hpp  capture-scanner.cpp  capture-scanner.hpp  chunk.hpp  code-point.hpp  code-token.hpp  command.hpp  compound-scanner.cpp  compound-scanner.hpp  compound-tweaks.cpp  compound-tweaks.hpp  compound.cpp  compound.hpp  connexion.cpp  connexion.hpp  constant.hpp  exception.hpp  extended-scanner.cpp  extended-scanner.hpp  extended-tweaks.cpp  extended-tweaks.hpp  get-command-parameters.cpp  get-command-parameters.hpp  get-extended-identity.cpp  get-extended-identity.hpp  get-extended-status.cpp  get-extended-status.hpp  get-focus-position.cpp  get-focus-position.hpp  get-hardware-property.cpp  get-hardware-property.hpp  get-identity.cpp  get-identity.hpp  get-push-button-status.cpp  get-push-button-status.hpp  get-scan-parameters.cpp  get-scan-parameters.hpp  (+75 more)
drivers/esci/tests/: Makefile.am  compound-protocol.cpp  compound-scanning.cpp  grammar-formats.cpp  grammar-formats.tcs  grammar-mechanics.cpp  grammar.cpp  grammar.tcs  setter.cpp  udev-rules.cpp
filters/: Makefile.am  autocrop.cpp  autocrop.hpp  deskew.cpp  deskew.hpp  doc-locate.cpp  g3fax.cpp  g3fax.hpp  get-text-orientation  image-skip.cpp  image-skip.hpp  jpeg.cpp  jpeg.hpp  lut.cpp  lut.hpp  magick.cpp  magick.hpp  padding.cpp  padding.hpp  pdf.cpp  pdf.hpp  pnm.cpp  pnm.hpp  reorient.cpp  reorient.hpp  shell-pipe.cpp  shell-pipe.hpp  threshold.cpp  threshold.hpp
filters/pdf/: array.cpp  array.hpp  dictionary.cpp  dictionary.hpp  object.cpp  object.hpp  primitive.cpp  primitive.hpp  writer.cpp  writer.hpp
filters/tests/: Makefile.am  image-skip.cpp  jpeg.cpp  lut.cpp  magick.cpp  padding.cpp  pdf.cpp  pnm.cpp  reorient.cpp  shell-pipe.cpp  threshold.cpp
gtkmm/: Makefile.am  about.xml.in  action-dialog.cpp  action-dialog.hpp  chooser.cpp  chooser.hpp  dialog-alt.glade  dialog.cpp  dialog.glade  dialog.hpp  dialog.rc  dropdown.cpp  dropdown.hpp  editor.cpp  editor.hpp  file-chooser.cpp  file-chooser.hpp  presets.cpp  presets.hpp  preview.cpp  preview.hpp  pump.cpp  pump.hpp
include/: boost-test.am
lib/: Makefile.am  buffer.cpp  connexion.cpp  constraint.cpp  context.cpp  descriptor.cpp  device-info.cpp  device.cpp  devices.conf  exception.cpp  file.cpp  filter.cpp  hal.cpp  hal.hpp  iobase.cpp  key.cpp  log.cpp  media.cpp  monitor.cpp  octet.cpp  option.cpp  preset.cpp  pump.cpp  quantity.cpp  range.cpp  run-time.cpp  run-time.ipp  scanner.cpp  store.cpp  stream.cpp  string.cpp  tag.xml  tag.xsl  toggle.cpp  udev.cpp  udev.hpp  value.cpp
lib/tests/: Makefile.am  buffer.cpp  connexion.cpp  descriptor.cpp  device.cpp  file.cpp  ipc-cnx.cpp  log.cpp  memory.cpp  monitor.cpp  null.cpp  octet.cpp  option.cpp  quantity.cpp  run-time.cpp  scanner.cpp  stream.cpp  string.cpp  tiff.cpp  value.cpp  value.hpp
outputs/: tiff.cpp  tiff.hpp
po/: LINGUAS  Makevars  POTFILES.in  de.po  en.po  es.po  es_MX.po  fr.po  it.po  ja.po  ko.po  nl.po  pt.po  pt_BR.po  ru.po  zh_CN.po  zh_TW.po
sane/: Makefile.am  backend.cpp  backend.hpp  device.cpp  device.hpp  guard.hpp  handle.cpp  handle.hpp  log.hpp  ltmain.sh-2.2.6b.diff  ltmain.sh-2.4.2.diff  ltmain.sh-2.4.6.diff  ltmain.sh-2.4.diff  utsushi.desc  value.cpp  value.hpp  version.hpp
sane/tests/: Makefile.am  backend.cpp  sane-api.ipp  value.cpp
src/: Makefile.am  help.cpp  list.cpp  main.cpp  scan-cli.cpp  scan-gtkmm.cpp  scan.cpp  version.cpp
src/tests/: Makefile.am  command.cpp  main-failure.cpp  main.cpp
tests/: Makefile.am  indentation.cpp  uncrustify.cfg
tools/: boost-test-report  boost-test-report.xsl  include-boost-src
upstream/include/: no_attribute_directive.hpp
utsushi/: array.hpp  buffer.hpp  condition-variable.hpp  connexion.hpp  constraint.hpp  context.hpp  cstdint.hpp  descriptor.hpp  device-info.hpp  device.hpp  exception.hpp  file.hpp  filter.hpp  format.hpp  functional.hpp  i18n.hpp  iobase.hpp  key.hpp  log.hpp  media.hpp  memory.hpp  monitor.hpp  mutex.hpp  octet.hpp  option.hpp  preset.hpp  pump.hpp  quantity.hpp  range.hpp  regex.hpp  run-time.hpp  scanner.hpp  signal.hpp  store.hpp  stream.hpp  string.hpp  thread.hpp  toggle.hpp  type-traits.hpp  value.hpp
utsushi/pattern/: decorator.hpp
utsushi/test/: catch-system-errors.hpp  command-line.hpp  environment.hpp  memory.hpp  null.hpp  runner.ipp  tools.hpp
